# lightball

./: .gitignore  HARDWARE.md  HA_CORE_PR.md  HA_INTEGRATION.md  PI_SETUP.md  README.md  SURVEY.md  WRITEUP.md  controller.py  csrmesh_crypto.py  hacs.json  hold.py  lightball-bridge.service  lightball.py  mqtt_bridge.py  paint.py  parse_btsnoop.py  probe.py  readback.py  requirements.txt  solidcolor.py  vendortest.py
brands/: README.md
custom_components/lightball/: __init__.py  config_flow.py  const.py  csrmesh.py  device.py  diagnostics.py  entity.py  light.py  manifest.json  quality_scale.yaml
custom_components/lightball/translations/: en.json
lib/: README.md  pyproject.toml
lib/src/lightball_ble/: __init__.py  client.py  protocol.py
lib/tests/: test_client.py  test_protocol.py
script/: prep_core_pr.sh
tests/: conftest.py  test_config_flow.py  test_init.py  test_light.py
