[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lightball-ble"
version = "0.1.0"
description = "CSRmesh BLE protocol + client for Holiday Show Home LED Balls"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "dallanwagz" }]
dependencies = [
    "bleak>=0.22.0",
    "bleak-retry-connector>=3.5.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/dallanwagz/lightball"

[tool.setuptools.packages.find]
where = ["src"]
